[package]
name = "kademliar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.80"
bendy = "0.3.3"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
hex = "0.4.3"
itertools = "0.13.0"
pretty-hex = "0.4.1"
rand = "0.8.5"
thiserror = "1.0.61"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
similar-asserts = "1.5.0"
